<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherCast</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="station_id">Enter a Station ID</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">The Message</string>
    <string name="action_search">Action Search</string>
    <string name="title_activity_station_list">Station List</string>
    <string name="title_template_step">Weather</string>
    <string name="temperature">Temperature</string>
    <string name="wind">Wind</string>
    <string name="pop">Probability of precipitation</string>
    <string name="weather">Weather - amount : type</string>
    <string name="howIsSailingExperience">How will your sailing experience be?</string>
    <string name="weatherForecast">Weather forecast not available for this day.</string>
    <string name="day_of_week">Day of week</string>
    <string name="title_activity_new_station">NewStationActivity</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code - Required</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="delete_str">Delete</string>
    <string name="ok">OK</string>
    <string name="add_city_to_list">Add City to List </string>
    <string name="action_days_per_screen">Manage Forecast Format </string>
    <string name="action_days_per_screen_1">1 Day Description</string>
    <string name="action_days_per_screen_graphic_4">4 Days - Graphics</string>
    <string name="action_days_per_screen_min_graphic_4">4 Days - Min Graphics</string>
    <string name="action_days_per_screen_number_4">4 Days - Typed</string>
    <string name="resort_locations_list">Sort Locations List</string>
    <string name="resort_locations_list_by_state">Sort By State</string>
    <string name="resort_locations_list_by_city">Sort By City</string>
</resources>
