<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/date_time"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:text="City, State, Jan 1"
            android:textSize="@dimen/activity_vertical_margin"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/day_of_week"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="DyofWkHr"
            android:textSize="@dimen/activity_vertical_margin"
            android:textStyle="bold"
            android:typeface="monospace" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/temp_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/temperature"
            android:src="@drawable/temp_guage" />

        <TextView
            android:id="@+id/temp_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="none"
            android:text="50 degrees" />

        <TextView
            android:id="@+id/temp_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="none"
            android:text="35 degrees" />

        <TextView
            android:id="@+id/temp_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="none"
            android:text="60 degrees" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/wind_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/wind"
            android:src="@drawable/app_icon" />

        <TextView
            android:id="@+id/wind_sustained"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="none"
            android:text="10 knts" />

        <TextView
            android:id="@+id/wind_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="N" />

        <TextView
            android:id="@+id/wind_gust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="15 knt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/pop_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pop"
            android:src="@drawable/app_icon" />

        <TextView
            android:id="@+id/pop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="none"
            android:text="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/weather_predominant_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/weather"
            android:src="@drawable/sun_cloud" />

        <TextView
            android:id="@+id/weather_predominant_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="none"
            android:text="heavy, medium, light" />

        <TextView
            android:id="@+id/weather_predominant_rain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="none" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/LabelSailingExp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:contentDescription="@string/howIsSailingExperience"
            android:gravity="center_vertical"
            android:text="@string/howIsSailingExperience"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/sailingExperience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/howIsSailingExperience" />

    </LinearLayout>

</LinearLayout>